Part 3 of making static maps work